// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`eslint-plugin > should lint without error > .github/workflows/empty-name.yml 1`] = `
[
  {
    "column": 1,
    "endColumn": 6,
    "endLine": 1,
    "line": 1,
    "message": "Action name must be a non-empty string.",
    "messageId": "invalidName",
    "ruleId": "github-action/require-action-name",
    "severity": 2,
  },
]
`;

exports[`eslint-plugin > should lint without error > .github/workflows/no-name-yaml.yaml 1`] = `
[
  {
    "column": 1,
    "endColumn": 1,
    "endLine": 5,
    "line": 1,
    "message": "Expected extension \`yml\`, but got \`yaml\`.",
    "messageId": "unexpected",
    "ruleId": "github-action/prefer-file-extension",
    "severity": 2,
  },
  {
    "column": 1,
    "endColumn": 13,
    "endLine": 4,
    "line": 1,
    "message": "Require action name to be set.",
    "messageId": "noName",
    "ruleId": "github-action/require-action-name",
    "severity": 2,
  },
]
`;

exports[`eslint-plugin > should lint without error > .github/workflows/no-name-yml.yml 1`] = `
[
  {
    "column": 1,
    "endColumn": 13,
    "endLine": 4,
    "line": 1,
    "message": "Require action name to be set.",
    "messageId": "noName",
    "ruleId": "github-action/require-action-name",
    "severity": 2,
  },
]
`;

exports[`eslint-plugin > should lint without error > .github/workflows/with-name-yaml.yaml 1`] = `
[
  {
    "column": 1,
    "endColumn": 1,
    "endLine": 7,
    "line": 1,
    "message": "Expected extension \`yml\`, but got \`yaml\`.",
    "messageId": "unexpected",
    "ruleId": "github-action/prefer-file-extension",
    "severity": 2,
  },
]
`;

exports[`eslint-plugin > should lint without error > .github/workflows/with-name-yml.yml 1`] = `[]`;
